# e2e-market-attribution-and-budget-optimization

./: .gitignore  README.md  main.py  pyproject.toml
docs/: DATA_FIELDS_AND_OPERATIONS.md  Phase-1 Data Acquisition and Preperation.md  Phase-2 Multi-Touch Attribution and Validation.md  phase-1-data-acquisition-and-preparation.md
notebooks/: 01_eda.ipynb
prefect_flows/: criteo_etl.py
src/data/tasks/: download.py
src/prefect_tasks/: bronze.py  download.py  gold.py  silver.py
src/utils/: logging_config.py
